Fix FileList and ResourceList not showing heading when empty.

--- a/styles/_file-list.scss
+++ b/styles/_file-list.scss
@@ -1,3 +1,3 @@
-.sc-file-list > * + * {
+.sc-file-list > .se-files > * + * {
   margin-top: var(--default-spacing);
 }
