--- a/styles/_resource-list.scss
+++ b/styles/_resource-list.scss
@@ -1,3 +1,3 @@
-.sc-resource-list > * + * {
+.sc-resource-list > .se-resources > * + * {
   margin-top: var(--default-spacing);
 }
